syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "shared.proto";

option go_package = "github.com/yash91989201/superfast-delivery-api/common/pb";

enum Gender {
  MALE = 0;
  FEMALE = 1;
  OTHERS = 2;
  UNDISCLOSED = 3;
}

enum AddressAlias {
  HOME = 0;
  WORK = 1;
  HOTEL = 2;
  OTHER = 3;
}

message Profile {
  string id = 1;
  string name = 2;
  optional string image_url = 3;
  optional Date dob = 4;
  optional Date anniversary = 5;
  optional Gender gender = 6;
  string auth_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateProfileReq {
  string name = 1;
  optional string image_url = 2;
  optional Date dob = 3;
  optional Date anniversary = 4;
  optional Gender gender = 5;
  string auth_id = 6;
}

message GetProfileReq {
  string auth_id = 1;
}

message UpdateProfileReq {
  string id = 1;
  optional string name = 2;
  optional string image_url = 3;
  optional Date dob = 4;
  optional Date anniversary = 5;
  optional Gender gender = 6;
  string auth_id = 7;
}

message DeleteProfileReq {
  string auth_id = 1;
}

message DeliveryAddress {
  string id = 1;
  string receiver_name = 2;
  string receiver_phone = 3;
  AddressAlias address_alias = 4;
  optional string other_alias = 5;
  double latitude = 6;
  double longitude = 7;
  string address = 8;
  optional string nearby_landmark = 9;
  optional string delivery_instruction = 10;
  bool is_default = 11;
  string auth_id = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message CreateDeliveryAddressReq {
  string receiver_name = 1;
  string receiver_phone = 2;
  AddressAlias address_alias = 3;
  optional string other_alias = 4;
  double latitude = 5;
  double longitude = 6;
  string address = 7;
  optional string nearby_landmark = 8;
  optional string delivery_instruction = 9;
  bool is_default = 10;
  string auth_id = 11;
}

message GetDeliveryAddressReq {
  string id = 1;
}

message ListDeliveryAddressReq {
  string auth_id = 1;
}

message ListDeliveryAddressRes {
  repeated DeliveryAddress delivery_addresses = 1;
}

message UpdateDeliveryAddressReq {
  optional string receiver_name = 1;
  optional string receiver_phone = 2;
  optional AddressAlias alias = 3;
  optional LatLng location = 4;
  optional string address = 5;
  optional string nearby_landmark = 6;
  optional string delivery_instruction = 7;
  string auth_id = 8;
}

message DeleteDeliveryAddressReq {
  string id = 1;
}

service UserService {
  rpc CreateProfile(CreateProfileReq) returns (Profile) {}
  rpc GetProfile(GetProfileReq) returns (Profile) {}
  rpc UpdateProfile(UpdateProfileReq) returns (Profile) {}
  rpc DeleteProfile(DeleteProfileReq) returns (EmptyRes) {}

  rpc CreateDeliveryAddress(CreateDeliveryAddressReq) returns (DeliveryAddress) {}
  rpc GetDeliveryAddress(GetDeliveryAddressReq) returns (DeliveryAddress) {}
  rpc ListDeliveryAddress(ListDeliveryAddressReq) returns (ListDeliveryAddressRes) {}
  rpc UpdateDeliveryAddress(DeliveryAddress) returns (DeliveryAddress) {}
  rpc DeleteDeliveryAddress(DeleteDeliveryAddressReq) returns (EmptyRes) {}
}
